feat!: refactor the refactor (#710)
