# internal/login/login_server.go
@@ -1,24 +1,20 @@
 package login
 
 import (
-	"log/slog"
-	"net/http"
-	"os"
+	"fmt"
 
 	"github.com/SwissDataScienceCenter/renku-gateway/internal/config"
-	"github.com/SwissDataScienceCenter/renku-gateway/internal/db"
 	"github.com/SwissDataScienceCenter/renku-gateway/internal/models"
 	"github.com/SwissDataScienceCenter/renku-gateway/internal/oidc"
+	"github.com/SwissDataScienceCenter/renku-gateway/internal/sessions"
 	"github.com/labstack/echo/v4"
 )
 
 type LoginServer struct {
-	sessionStore      models.SessionStore
-	providerStore     oidc.ClientStore
-	tokenStore        models.TokenStore
-	sessionHandler    models.SessionHandler
-	cliSessionHandler models.SessionHandler
-	config            *config.LoginConfig
+	config        *config.LoginConfig
+	providerStore oidc.ClientStore
+	sessions      *sessions.SessionStore
+	tokenStore    models.TokenStoreInterface
 }
 
 func (l *LoginServer) RegisterHandlers(server *echo.Echo, commonMiddlewares ...echo.MiddlewareFunc) {
@@ -26,57 +22,12 @@ func (l *LoginServer) RegisterHandlers(server *echo.Echo, commonMiddlewares ...e
 	e.Use(commonMiddlewares...)
 
 	wrapper := ServerInterfaceWrapper{Handler: l}
-	e.GET(
-		"/callback",
-		wrapper.GetCallback,
-		NoCaching,
-	)
-	e.GET(
-		"/health",
-		wrapper.GetHealth,
-	)
-	e.GET(
-		"/login",
-		wrapper.GetLogin,
-		NoCaching,
-		l.sessionHandler.Middleware(),
-	)
-	e.GET(
-		"/logout",
-		wrapper.GetLogout,
-		NoCaching,
-		l.sessionHandler.Middleware(),
-	)
-	e.POST(
-		"/logout",
-		wrapper.PostLogout,
-		NoCaching,
-		l.sessionHandler.Middleware(),
-	)
-	e.GET("/test", l.GetAuthTest, NoCaching, l.sessionHandler.Middleware())
-	e.GET(
-		"/device/login",
-		wrapper.GetDeviceLogin,
-		NoCaching,
-	)
-	e.POST(
-		"/device/login",
-		wrapper.PostDeviceLogin,
-		NoCaching,
-	)
-	e.POST(
-		"/device/logout",
-		wrapper.PostDeviceLogout,
-		NoCaching,
-		l.cliSessionHandler.Middleware(),
-	)
-	tokenProxyMiddlewares, err := l.DeviceTokenProxy()
-	if err != nil {
-		slog.Error("LOGIN SERVER INITIALIZATION", "error", err)
-		os.Exit(1)
-	}
-	// /device/token is just proxied - it does not need a handler on this server
-	e.Group("/device/token", tokenProxyMiddlewares...)
+	e.GET("/login", wrapper.GetLogin, NoCaching)
+	e.GET("/callback", wrapper.GetCallback, NoCaching)
+	e.GET("/logout", wrapper.GetLogout, NoCaching)
+	e.GET("/user-profile", wrapper.GetUserProfile)
+	e.GET("/gitlab/exchange", l.GetGitLabToken, NoCaching)
+	e.GET("/test", l.GetAuthTest, NoCaching)
 }
 
 type LoginServerOption func(*LoginServer) error
@@ -93,32 +44,16 @@ func WithConfig(loginConfig config.LoginConfig) LoginServerOption {
 	}
 }
 
-func WithDBConfig(dbConfig config.RedisConfig) LoginServerOption {
+func WithSessionStore(sessions *sessions.SessionStore) LoginServerOption {
 	return func(l *LoginServer) error {
-		options := []db.RedisAdapterOption{db.WithRedisConfig(dbConfig)}
-		if l.config.TokenEncryption.Enabled && l.config.TokenEncryption.SecretKey != "" {
-			options = append(options, db.WithEcryption(string(l.config.TokenEncryption.SecretKey)))
-		}
-		rdb, err := db.NewRedisAdapter(options...)
-		if err != nil {
-			return err
-		}
-		l.tokenStore = &rdb
-		l.sessionStore = &rdb
+		l.sessions = sessions
 		return nil
 	}
 }
 
-func WithTokenStore(store models.TokenStore) LoginServerOption {
+func WithTokenStore(store models.TokenStoreInterface) LoginServerOption {
 	return func(l *LoginServer) error {
 		l.tokenStore = store
-		return nil
-	}
-}
-
-func WithSessionStore(store models.SessionStore) LoginServerOption {
-	return func(l *LoginServer) error {
-		l.sessionStore = store
 		return nil
 	}
 }
@@ -127,45 +62,23 @@ func WithSessionStore(store models.SessionStore) LoginServerOption {
 // and initiates the login flow for users.
 func NewLoginServer(options ...LoginServerOption) (*LoginServer, error) {
 	server := LoginServer{}
-	// by default we setup all dummy storage which in production is overriden later by the options
-	dummyStore := db.NewMockRedisAdapter()
-	server.tokenStore = &dummyStore
-	server.sessionStore = &dummyStore
-	server.sessionHandler = models.NewSessionHandler(
-		models.WithSessionStore(dummyStore),
-		models.WithTokenStore(dummyStore),
-	)
-	providerStore, err := oidc.NewClientStore(map[string]config.OIDCClient{})
-	if err != nil {
-		return nil, err
-	}
-	server.providerStore = providerStore
 	for _, opt := range options {
 		err := opt(&server)
 		if err != nil {
-			return nil, err
+			return &LoginServer{}, err
 		}
 	}
-	sessionHandler := models.NewSessionHandler(
-		models.WithSessionStore(server.sessionStore),
-		models.WithTokenStore(server.tokenStore),
-	)
-	cliSessionHandler := models.NewSessionHandler(
-		models.WithSessionStore(server.sessionStore),
-		models.WithTokenStore(server.tokenStore),
-		models.DontCreateIfMissing(),
-		models.DontRecreateIfExpired(),
-		models.WithCookieTemplate(http.Cookie{
-			Name:     models.CliSessionCookieName,
-			Secure:   false,
-			HttpOnly: true,
-			Path:     "/",
-			MaxAge:   3600,
-		}),
-		models.WithHeaderKey(models.CliSessionHeaderKey),
-		models.WithContextKey(models.CliSessionCtxKey),
-	)
-	server.sessionHandler = sessionHandler
-	server.cliSessionHandler = cliSessionHandler
+	if server.config == nil {
+		return &LoginServer{}, fmt.Errorf("login server config not provided")
+	}
+	if server.providerStore == nil {
+		return &LoginServer{}, fmt.Errorf("OIDC providers not initialized")
+	}
+	if server.sessions == nil {
+		return &LoginServer{}, fmt.Errorf("session store not initialized")
+	}
+	if server.tokenStore == nil {
+		return &LoginServer{}, fmt.Errorf("token store is not initialized")
+	}
 	return &server, nil
 }
